# target-brainial

./: README.md  pyproject.toml
sample_payload/: data.singer
target_brainial/: client.py  sinks.py  target.py
target_brainial/tests/: test_core.py
